--- a/account.details.api/Properties/launchSettings.json
+++ b/account.details.api/Properties/launchSettings.json
@@ -4,15 +4,14 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:61598",
-      "sslPort": 44332
+      "applicationUrl": "http://localhost:5000"
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
